--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>sample</title>
+    <link rel="stylesheet" type="text/css" href="build/common.css" media="all">
+
 </head>
 <body>
 <app></app>
