--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
 <app></app>
-<script src="build/bundle.js"></script>
+<script src="build/app.bundle.js"></script>
 </body>
 </html>
